# ghost-cm-sync

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
deploy/: DEPLOY.md  ghost-cm-sync.service  ghost-cm-worker.service  install.sh  nginx.conf
scripts/: cleanup_cm_orphans.py  cleanup_unsubscribed.py  full_sync.py  replay_dlq.py  sync_unsubscribes.py
src/: __init__.py  campaign_monitor.py  config.py  logging_config.py  main.py  models.py  processor.py  queue.py  signature.py  worker.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_processor.py  test_signature.py
